<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/txt_title_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="72sp"
        android:text="@string/act_stats_title" />

    <TextView
        android:id="@+id/txt_level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:textSize="22sp"
        android:text="@string/txt_level1" />

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/btn_menu"
        android:background="@null"
        android:src="@drawable/btn_menu" />

    <TextView
        android:id="@+id/txt_level1_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_gamesTitle"
        android:layout_alignLeft="@+id/txt_games_value"
        android:text="@string/txt_level1_value"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_gamesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_level1"
        android:layout_below="@+id/txt_level1"
        android:layout_marginTop="24dp"
        android:text="@string/txt_games_title"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_games_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_gamesTitle"
        android:layout_alignBottom="@+id/txt_gamesTitle"
        android:layout_alignLeft="@+id/txt_title_stats"
        android:layout_marginLeft="38dp"
        android:text="@string/txt_games_value"
        android:textSize="22sp" />
 
</RelativeLayout>
