<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background">

    <ImageButton
        android:id="@+id/btn_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:contentDescription="@string/btn_start"
        android:src="@drawable/btn_options" />

    <ImageButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="104dp"
        android:background="@null"
        android:contentDescription="@string/btn_start"
        android:src="@drawable/btn_start" />

    <ImageButton
        android:id="@+id/btn_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_start"
        android:layout_toLeftOf="@+id/btn_options"
        android:background="@null"
        android:contentDescription="@string/btn_stats"
        android:src="@drawable/btn_stats" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_options"
        android:layout_marginRight="15dp"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/btn_stats"
        android:text="@string/act_main_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
